# SanskaraAI

./: .env  .env.example  .gitignore  GEMINI.md  TODO.MD  docker-compose.yml  simple_client.py
sanskara/: .env  .env.example  Dockerfile  README.md  cache.py  config.py  logger.py  logging_setup.py  main.py  pyproject.toml  pytest.ini  requirements.txt
sanskara/agent_websocket/: service.py
sanskara/api/: app.py  security.py
sanskara/api/history/: models.py  routes.py
sanskara/docs/: TESTING_STRATEGY.md  api_endpoints.md  health_endpoint.md
sanskara/sanskara/: adk_artifacts.py  agent.py  artifacts_store.py  common.py  context_debugger.py  context_manager.py  context_manager_v2.py  context_models.py  context_service.py  db.py  db_queries.py  exceptions.py  helpers.py  main.py  models.py  prompt.py  semantic_recall.py  tools.py
sanskara/sql/: V6_add_adk_session_and_final_summary.sql
sanskara/tests/: endpoint_onboard_test.sh  test_budget_agent_tools.py  test_creative_agent.py  test_creative_agent_tools.py  test_database.py  test_database_crud.py  test_enhanced_mood_board_tools.py  test_guest_communication_agent_tools.py  test_image_generation_tools.py  test_main_tools.py  test_orchestrator_agent.py  test_orchestrator_vendor_integration.py  test_real_image_generation_integration.py  test_real_moodboard_tools.py  test_real_wedding_config.py  test_ritual_cultural_agent_tools.py  test_ritual_tools.py  test_setup_agent_invocation.py  test_setup_agent_tools.py  test_task_timeline_agent_tools.py  test_vendor_management_agent.py  test_vendor_management_agent_tools.py
(+89 files in other folders)
